[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/cameras_&_ui/sliders/resolution.gd" type="Script" id=1]
[ext_resource path="res://resources/environments/the_calm.tres" type="Environment" id=2]
[ext_resource path="res://scripts/cameras_&_ui/settings_warning.gd" type="Script" id=3]
[ext_resource path="res://scripts/cameras_&_ui/fov_camera.gd" type="Script" id=4]
[ext_resource path="res://scripts/cameras_&_ui/sub_viewport.gd" type="Script" id=5]
[ext_resource path="res://scripts/world/main_light.gd" type="Script" id=6]
[ext_resource path="res://scripts/cameras_&_ui/menu_viewport_container.gd" type="Script" id=7]
[ext_resource path="res://resources/theme/main.theme" type="Theme" id=8]
[ext_resource path="res://scenes/world/maps/usa.tscn" type="PackedScene" id=9]

[node name="Current" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 7 )

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 640, 360 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3
shadow_atlas_size = 4096
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 0.524402, 0, 0.851471, 0, 1, 0, -0.851471, 0, 0.524402, 307.292, 5.02689, 257.395 )
environment = ExtResource( 2 )
fov = 75.0
far = 2500.0
script = ExtResource( 4 )

[node name="Map" parent="ViewportContainer/Viewport" instance=ExtResource( 9 )]

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport"]
transform = Transform( -0.237395, 0.670145, -0.703242, -0.509961, 0.530184, 0.677381, 0.826791, 0.519433, 0.215885, 401.444, 33.9848, 243.163 )
light_energy = 0.5
shadow_enabled = true
directional_shadow_mode = 2
directional_shadow_fade_start = 0.9
directional_shadow_bias_split_scale = 1.0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 324.0
script = ExtResource( 6 )

[node name="SliderBackground" type="ColorRect" parent="."]
anchor_left = 0.2
anchor_top = 0.716
anchor_right = 0.8
anchor_bottom = 0.907
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
color = Color( 0, 0, 0, 0.603922 )

[node name="Label" type="Label" parent="SliderBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
text = "Resolution: 640 x 360"
align = 1
autowrap = true

[node name="HSlider" type="HSlider" parent="SliderBackground"]
anchor_left = 0.1
anchor_top = 0.32
anchor_right = 0.9
anchor_bottom = 1.0
focus_neighbour_top = NodePath("../TransformInterpolationSlider")
theme = ExtResource( 8 )
min_value = -1000.0
max_value = -1.0
value = -1.0
rounded = true
scrollable = false
script = ExtResource( 1 )

[node name="Warning" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.093
anchor_right = 0.8
anchor_bottom = 0.284
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 16.7768
theme = ExtResource( 8 )
text = "NEED_MORE_VRAM"
align = 1
valign = 1
autowrap = true
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Warning"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.603922 )

[connection signal="draw" from="ViewportContainer" to="SliderBackground/HSlider" method="_on_ViewportContainer_draw"]
[connection signal="value_changed" from="SliderBackground/HSlider" to="Warning" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SliderBackground/HSlider" to="SliderBackground/HSlider" method="_on_HSlider_value_changed"]
